moved js files to their folderand few changes to admin login

--- a/current_loans.html
+++ b/current_loans.html
@@ -90,7 +90,7 @@
     <footer class="mainFooter">
         <p>Copyright &copy; 2019 QuickCredit Co.</p>
     </footer>
-    <script src="index.js"></script>
+    <script src="./js//signupjs.js"></script>
 </body>
 
 </html>
