--- a/index1.html
+++ b/index1.html
@@ -34,7 +34,7 @@
                     </p>
                     <p>We Also offer school loans to any given student at a cheaper rate compared to other companies.
                     </p>
-                    <img src="../images.jpeg" alt="Loading image">
+                    <img src="./img/images.jpeg" alt="Loading image">
                 </content>
             </article>
             <article class="rightContent">
@@ -62,7 +62,7 @@
     <footer class="mainFooter">
         <p>Copyright &copy; 2019 QuickCredit Co.</p>
     </footer>
-    <script src="../js/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
