--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>Apply for loan</title>
-<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./css/signup.css">
 <style>
 
 </style>
