--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
-    <script src="js/index.js"></script>
     <title>QuickCredit</title>
 </head>
 
@@ -87,7 +86,7 @@
     <footer class="mainFooter">
         <p>Copyright &copy; 2019 QuickCredit Co.</p>
     </footer>
-    <script src="../js/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
