--- a/user.html
+++ b/user.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
-    <script src="js/index.js"></script>
     <title>QuickCredit</title>
 </head>
 
@@ -39,7 +38,7 @@
                     </p>
                     <p>We Also offer school loans to any given student at a cheaper rate compared to other companies.
                     </p>
-                    <img src="../images.jpeg" alt="Loading image">
+                    <img src="./img/images.jpeg" alt="Loading image">
                 </content>
             </article>
             <article class="rightContent">
@@ -122,7 +121,7 @@
     <footer class="mainFooter">
         <p>Copyright &copy; 2019 QuickCredit Co.</p>
     </footer>
-    <script src="index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
