--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
     <footer class="mainFooter">
         <p>Copyright &copy; 2019 QuickCredit Co.</p>
     </footer>
-    <script src="index.js"></script>
+    <script src="./js/signupjs.js"></script>
 </body>
 
 </html>
