--- a/contact.html
+++ b/contact.html
@@ -26,22 +26,22 @@
 
     <div class="mainContent">
         <div class="content">
-            <article class="contactContent">
-                <h2>You can always reach us here:</h2>
-                <content>
-                    <div>Login here
+            <h2>You can always reach us here:</h2>
+            <content>
+                <form class="contactform" action="./index1.html" method="">
+                    <div>Leave your opinion
                         <hr>
-                        <p><input placeholder="name" name="uname" id="uname" type="text"></p>
-                        <p><input placeholder="telephone" name="tel" id="pword" type="tel"></p>
+                        <p><input placeholder="E-mail" name="mail" id="mail" type="email"></p>
+                        <p><input placeholder="Title" name="title" id="pword" type="text"></p>
+                        <p><textarea placeholder="Comments" name="" id="" cols="30" rows="10"></textarea></p>
                     </div>
                     <div style="overflow:auto;">
                         <div style="float:right;">
-                            <button type="button" onclick=""> <a href="./user.html">Send</a> </button>
+                            <button type="button" onclick=""> <a href="./index1.html">Login</a></button>
                         </div>
                     </div>
-                    <img src="../images.jpeg" alt="Loading image">
-                </content>
-            </article>
+                </form>
+            </content>
         </div>
 
 
@@ -51,7 +51,7 @@
     <footer class="mainFooter">
         <p>Copyright &copy; 2019 QuickCredit Co.</p>
     </footer>
-    <script src="index.js"></script>
+    <script src="./js/signupjs.js"></script>
 </body>
 
 </html>
