update index page

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                     </p>
                     <p>We Also offer school loans to any given student at a cheaper rate compared to other companies.
                     </p>
-                    <img src="images.jpeg" alt="Loading image">
+                    <img src="./img/images.jpeg" alt="Loading image">
                 </content>
             </article>
             <article class="rightContent">
                 <content>
-                    <img src="loan.jpg" alt="" width="265px" height="340px">
+                    <img src="./img/loan.jpg" alt="" width="265px" height="340px">
                     <caption>No more papers to save the planet!</caption>
 
             </article>
