update all pages

--- a/Ui/html/apply_loan.html
+++ b/Ui/html/apply_loan.html
@@ -4,21 +4,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>Apply for loan</title>
-<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="../css/signup.css">
 <style>
 
 </style>
 
 <body class="body">
     <header class="mainheader">
-        <h1><a href="#">QuickCredit</a></h1>
+        <h1><a href="../index.html">Quick
+                <span>Credit</span> </a></h1>
         <nav>
 
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="loan_history.html">History</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./loan_history.html">History</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -57,13 +58,13 @@
         </div>
         <div style="overflow:auto;">
             <div style="float:right;">
-                <button type="button" id="nextBtn" onclick="populateTable()">Apply</button>
+                <a href="./user.html"><button type="button" id="nextBtn" onclick="populateTable()">Apply</button></a>
             </div>
         </div>
 
     </form>
 
-    <script src="signupjs.js">
+    <script src="../js/signupjs.js">
 
 
     </script>
