--- a/Ui/html/contact.html
+++ b/Ui/html/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/signup.css">
     <script src="index.js"></script>
     <title>QuickCredit</title>
 </head>
@@ -29,10 +29,12 @@
             <article class="contactContent">
                 <h2>You can always reach us here:</h2>
                 <content>
-                    <div>Login here
+                    <div>Contact us
                         <hr>
-                        <p><input placeholder="name" name="uname" id="uname" type="text"></p>
-                        <p><input placeholder="telephone" name="tel" id="pword" type="tel"></p>
+                        <p><input placeholder="name" name="uname" id="uname" type="text" required></p>
+                        <p><input placeholder="e-mail" name="email" id="email" type="text" required></p>
+                        <p><input placeholder="telephone" name="tel" id="tel" type="tel" required></p>
+                        <p><textarea name="" id="" cols="5" rows="10"></textarea></p>
                     </div>
                     <div style="overflow:auto;">
                         <div style="float:right;">
