--- a/Ui/html/signup.html
+++ b/Ui/html/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./css/signup.css">
+<link rel="stylesheet" href="../css/signup.css">
 <style>
 
 </style>
@@ -13,15 +13,15 @@
         <nav>
 
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="apply_loan.html">Apply for Loan</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./apply_loan.html">Apply for Loan</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <form id="regForm" action="index.html">
+    <form id="regForm" action="./index.html">
         <h1>Register here</h1>
 
         <div class="tab">First & last names
@@ -66,7 +66,7 @@
         </div>
     </form>
 
-    <script src="index.js">
+    <script src="../js/index.js">
 
     </script>
     <footer class="mainFooter">
