--- a/Ui/html/admin.html
+++ b/Ui/html/admin.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>Apply for loan</title>
-<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="../css/signup.css">
 <style>
 
 </style>
@@ -12,12 +12,12 @@
 <body class="body">
 
     <header class="mainheader">
-        <h1><a href="./index.html">Quick
+        <h1><a href="../index.html">Quick
                 <span>Credit</span> </a></h1>
 
         <nav>
             <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -43,7 +43,7 @@
 
     </form>
 
-    <script src="signupjs.js">
+    <script src="../js/signupjs.js">
 
 
     </script>
