--- a/Ui/html/approve.html
+++ b/Ui/html/approve.html
@@ -5,20 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>QuickCredit</title>
 </head>
 
 <body class="body">
     <header class="mainheader">
-        <h1><a href="./index.html">QuickCredit</a></h1>
+        <h1><a href="../index.html">Quick
+                <span>Credit</span> </a></h1>
         <nav>
 
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="loan_history.html">History</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./loan_history.html">History</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
