--- a/Ui/html/current_loans.html
+++ b/Ui/html/current_loans.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Loan Repayment</title>
 </head>
 
@@ -19,7 +19,7 @@
                 <li><a href="./index1.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="./loan_history.html">History</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./paid_loan.html">Paid Loans</a></li>
             </ul>
         </nav>
