--- a/Ui/html/user.html
+++ b/Ui/html/user.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="js/index.js"></script>
+    <link rel="stylesheet" href="../css/style.css">
     <title>QuickCredit</title>
 </head>
 
@@ -39,12 +38,12 @@
                     </p>
                     <p>We Also offer school loans to any given student at a cheaper rate compared to other companies.
                     </p>
-                    <img src="../images.jpeg" alt="Loading image">
+                    <img src="../images/images.jpeg" alt="Loading image">
                 </content>
             </article>
             <article class="rightContent">
                 <content>
-                    <img src="./img/loan.jpg" alt="" width="265px" height="340px">
+                    <img src="../images/loan.jpg" alt="" width="265px" height="340px">
                     <caption>No more papers to save the planet!</caption>
                     <!--
                         <form id="regForm" action="index.html">
@@ -122,7 +121,7 @@
     <footer class="mainFooter">
         <p>Copyright &copy; 2019 QuickCredit Co.</p>
     </footer>
-    <script src="index.js"></script>
+    <script src="../js/index.js"></script>
 </body>
 
 </html>
