--- a/Ui/index.html
+++ b/Ui/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../Ui/css/style.css">
     <script src="js/index.js"></script>
     <title>QuickCredit</title>
 </head>
 
 <body class="body">
     <header class="mainheader">
-        <h1><a href="../UI/index.html">Quick
+        <h1><a href="./index.html">Quick
                 <span>Credit</span> </a></h1>
         <nav>
 
@@ -38,12 +38,12 @@
                     </p>
                     <p>We Also offer school loans to any given student at a cheaper rate compared to other companies.
                     </p>
-                    <img src="./img/images.jpeg" alt="Loading image">
+                    <img src="./images/images.jpeg" alt="Loading image">
                 </content>
             </article>
             <article class="rightContent">
                 <content>
-                    <img src="./img/loan.jpg" alt="" width="265px" height="340px">
+                    <img src="./images/loan.jpg" alt="" width="265px" height="340px">
                     <caption>No more papers to save the planet!</caption>
 
             </article>
