update all pages

--- a/Ui/html/index2.html
+++ b/Ui/html/index2.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="js/index.js"></script>
+    <link rel="stylesheet" href="../css/style.css">
     <title>QuickCredit</title>
 </head>
 
@@ -39,46 +38,49 @@
                     </p>
                     <p>We Also offer school loans to any given student at a cheaper rate compared to other companies.
                     </p>
-                    <img src="../images.jpeg" alt="Loading image">
+                    <img src="../images/images.jpeg" alt="Loading image">
                 </content>
             </article>
             <article class="rightContent">
                 <content>
-                    <img src="./img/loan.jpg" alt="" width="265px" height="340px">
+                    <img src="../images/loan.jpg" alt="" width="265px" height="340px">
                     <caption>No more papers to save the planet!</caption>
             </article>
         </div>
 
         <div class="row">
-            <h3>How it works
-                <hr>
+            <h3 class="how-heading">How it works
 
             </h3>
             <div class="column">
                 <div class="card">
-                    <h3>Personal loans</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus neque libero quae qui
-                        itaque cum, sed magnam odio voluptas et sint ea voluptatum dignissimos? Sequi explicabo
-                        exercitationem sed officiis consequuntur.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quia nesciunt maiores temporibus
-                        beatae laudantium impedit commodi. Eaque assumenda optio placeat totam similique, cumque quidem
-                        tenetur quis laboriosam accusamus aliquam?</p>
+                    <h3>1. Create an account</h3>
+                    <p></p>
+                    <p>Simply creating an account with us will open the doors for yoou to get that amount of money that
+                        is missing to save a life <a href="./html/signup.html">Sign up</a></p>
+                    <p>Fill out a form with your personal data.</p>
                 </div>
             </div>
 
-            <div class="column">
+            <div class="column1">
                 <div class="card">
-                    <h3>Business loans</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur iure suscipit, quae quaerat
-                        fugit perferendis eum sequi officia numquam hic cumque consequuntur deserunt eaque, repudiandae
-                        nostrum, recusandae incidunt sed corporis!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia voluptates sit deleniti vero
-                        doloremque dignissimos aliquid, nesciunt tempora cum iure nam officiis quod eos! Cumque
-                        voluptate quidem distinctio deleniti amet?</p>
+                    <h3>3. Wait as we review your loan</h3>
+                    <p></p>
+                    <p>Just relax as our customer care agents review your loan and check unpaid and within a few minutes
+                        a message
+                        confirmation will be sent to your mail
+                    </p>
                 </div>
             </div>
 
-
+            <div class="column1">
+                <div class="card">
+                    <h3>2. Apply for the loan that you need</h3>
+                    <p></p>
+                    <p>You will need to fill a form in less than 1 minute in order to apply for a specific loan where
+                        you will give the reason, the amonut needed and a few details.</p>
+                </div>
+            </div>
         </div>
         </article>
     </div>
