--- a/Ui/html/signup.html
+++ b/Ui/html/signup.html
@@ -8,12 +8,12 @@
 
 <body class="body">
     <header class="mainheader">
-        <h1><a href="./index.html">Quick
+        <h1><a href="">Quick
                 <span>Credit</span> </a></h1>
         <nav>
 
             <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="index2.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="./apply_loan.html">Apply for Loan</a></li>
                 <li><a href="./contact.html">Contact</a></li>
