--- a/Ui/html/contact.html
+++ b/Ui/html/contact.html
@@ -12,7 +12,7 @@
 
 <body class="body">
     <header class="mainheader">
-        <h1><a href="./index.html">Quick
+        <h1><a href="">Quick
                 <span>Credit</span> </a></h1>
         <nav>
 
