--- a/Ui/html/paid_loan.html
+++ b/Ui/html/paid_loan.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Loan Repayment</title>
 </head>
 
 <body class="body">
     <header class="mainheader">
-        <h1><a href="./index.html">Quick
+        <h1><a href="">Quick
                 <span>Credit</span> </a></h1>
         <nav>
 
