--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../Ui/css/style.css">
-    <script src="js/index.js"></script>
+    <link rel="stylesheet" href="../quickCredit/Ui/css/style.css">
     <title>QuickCredit</title>
 </head>
 
@@ -17,9 +16,9 @@
         <nav>
 
             <ul>
-                <li><a href="./html/admin.html">Admin</a></li>
-                <li><a href="./html/login.html">Login</a></li>
-                <li><a href="./html/help.html">Help</a></li>
+                <li><a href="../quickCredit/Ui/html/admin.html">Admin</a></li>
+                <li><a href="../quickCredit/Ui/html/login.html">Login</a></li>
+
             </ul>
         </nav>
     </header>
@@ -38,12 +37,12 @@
                     </p>
                     <p>We Also offer school loans to any given student at a cheaper rate compared to other companies.
                     </p>
-                    <img src="./images/images.jpeg" alt="Loading image">
+                    <img src="../quickCredit/Ui/images/images.jpeg" alt="Loading image">
                 </content>
             </article>
             <article class="rightContent">
                 <content>
-                    <img src="./images/loan.jpg" alt="" width="265px" height="340px">
+                    <img src="../quickCredit/Ui/images/loan.jpg" alt="" width="265px" height="340px">
                     <caption>No more papers to save the planet!</caption>
 
             </article>
